[feat] Add logger config, logdir config yaml setting

--- a/server/config.yaml
+++ b/server/config.yaml
@@ -1,5 +1,5 @@
 server:
-  port: "8080"
+  port: "9999"
   mode: "debug"
   read_timeout: 60
   write_timeout: 60
@@ -8,3 +8,4 @@ server:
 log:
   level: "info"
   format: "json"
+  dir: "logs"
