[feat] same api file, delete config swagger setting

--- a/server/api/api.yaml
+++ b/server/api/api.yaml
@@ -7,6 +7,8 @@ info:
 servers:
   - url: http://localhost:8080
     description: Development server
+  - url: httpss://adi.tw/bank
+    description: Release server
 
 paths:
   /ping:
