--- a/server/api/api.yaml
+++ b/server/api/api.yaml
@@ -205,6 +205,39 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /v1/account/{id}/transactions:
+    get:
+      summary: Get transaction logs for account
+      operationId: getTransactions
+      tags:
+        - accounts
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Transaction logs retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransactionListResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
   /swagger/*any:
     get:
       summary: Swagger UI
@@ -335,3 +368,50 @@ components:
         data:
           type: object
           nullable: true
+    Transaction:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        type:
+          type: string
+          enum: [deposit, withdraw, transfer]
+          example: deposit
+        from_account_id:
+          type: integer
+          format: int64
+          nullable: true
+          example: 1
+        to_account_id:
+          type: integer
+          format: int64
+          example: 2
+        amount:
+          type: string
+          description: "Amount as decimal string with 2 decimal places"
+          example: "100.00"
+        description:
+          type: string
+          example: "Deposit to account"
+        created_at:
+          type: string
+          format: date-time
+          example: "2023-01-01T12:00:00Z"
+        trace_id:
+          type: string
+          example: "test-trace-123"
+    TransactionListResponse:
+      type: object
+      properties:
+        code:
+          type: integer
+          example: 200
+        message:
+          type: string
+          example: "success"
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/Transaction'
